# csv-to-parquet

./: .gitignore  Cargo.toml  LICENSE  README.md
Tickers/Si/: Si-3.25.parquet  Si-6.25.parquet
python/: open_parquet.py  req.txt
src/: cli.rs  csv_to_parquet.rs  file_processing.rs  main.rs  progress.rs  utils.rs
