[package]
name = "csv_to_parquet"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
polars = { version = "0.40", features = ["parquet", "temporal"] }
rayon = "1.10.0"
indicatif = { version = "0.17", features = ["rayon"] }
anyhow = "1.0"
num_cpus = "1.13"
clap = "4.0"
